# mobileapp

./: .gitignore  CMakeLists.txt  README.md  build.gradle  build.xml  settings.gradle  toolchain.properties
.claude/: settings.local.json
android/: AndroidManifest.xml  QUICKSTART.md  README.md  build.gradle  settings.gradle
android/jni/: CMakeLists.txt  android_native.cpp
android/src/main/java/com/multiplatform/gui/: MainActivity.java
android/src/main/res/values/: strings.xml
cmake/ios/: Info.plist.in
cmake/toolchains/: android.cmake  ios.cmake  mingw.cmake
include/: App.h  GuiManager.h
resources/: README.md
src/: App.cpp  GuiManager.cpp  main.cpp
